refactor(auth): merge login and logout into AuthController